--- a/Gent/Gent/Base.lproj/Main.storyboard
+++ b/Gent/Gent/Base.lproj/Main.storyboard
@@ -1,29 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13526" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--News-->
-        <scene sceneID="F4k-6W-P8i">
-            <objects>
-                <viewController id="OeY-bd-fan" customClass="NewsViewController" customModule="Gent" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="4HM-8P-Kl9">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="Gl6-Vz-cnA"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="News" image="second" id="mGp-Ae-U5h"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FvK-W3-F6r" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="721" y="-1540"/>
-        </scene>
         <!--MVP-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
@@ -272,11 +258,11 @@
                         <color key="barTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="OeY-bd-fan" kind="relationship" relationship="viewControllers" id="P0p-Cx-pMd"/>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="Rq4-xW-usP" kind="relationship" relationship="viewControllers" id="rBh-LQ-drl"/>
                         <segue destination="uT9-4G-GGK" kind="relationship" relationship="viewControllers" id="pIK-EP-bVN"/>
                         <segue destination="sDq-Ta-RpJ" kind="relationship" relationship="viewControllers" id="k1D-kO-zpt"/>
+                        <segue destination="6Xi-88-Pf3" kind="relationship" relationship="viewControllers" id="gc5-9B-KlO"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -312,6 +298,74 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ThQ-Sf-ofL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1524" y="-680"/>
+        </scene>
+        <!--News-->
+        <scene sceneID="T36-2b-1y7">
+            <objects>
+                <tableViewController id="6Xi-88-Pf3" customClass="NewsTableViewController" customModule="Gent" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="250" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="hS0-zi-HLz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Post" rowHeight="250" id="gSt-ZH-X1Z" customClass="NewsTableViewCell" customModule="Gent" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="250"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gSt-ZH-X1Z" id="Z2R-AU-ccr">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="249.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eq6-hx-wIi">
+                                            <rect key="frame" x="11" y="11" width="348" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="idM-gc-ITP">
+                                            <rect key="frame" x="13" y="40" width="348" height="166"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="166" id="UvY-WG-pp8"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F5w-25-yOb">
+                                            <rect key="frame" x="150" y="214" width="65" height="30"/>
+                                            <state key="normal" title="Get MVP!"/>
+                                            <connections>
+                                                <action selector="getMVP:" destination="gSt-ZH-X1Z" eventType="touchUpInside" id="NtI-Sv-S7y"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="F5w-25-yOb" firstAttribute="leading" secondItem="Z2R-AU-ccr" secondAttribute="leading" constant="150" id="DYm-wk-lVv"/>
+                                        <constraint firstItem="eq6-hx-wIi" firstAttribute="top" secondItem="Z2R-AU-ccr" secondAttribute="top" constant="11" id="PE3-Ye-YGV"/>
+                                        <constraint firstAttribute="trailing" secondItem="eq6-hx-wIi" secondAttribute="trailing" constant="16" id="SwI-bo-5oR"/>
+                                        <constraint firstItem="idM-gc-ITP" firstAttribute="top" secondItem="eq6-hx-wIi" secondAttribute="bottom" constant="8" id="Ycr-Ye-V6j"/>
+                                        <constraint firstItem="idM-gc-ITP" firstAttribute="centerX" secondItem="Z2R-AU-ccr" secondAttribute="centerX" id="e1e-O6-ztJ"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="F5w-25-yOb" secondAttribute="trailing" id="gXB-lh-Iwg"/>
+                                        <constraint firstItem="idM-gc-ITP" firstAttribute="leading" secondItem="Z2R-AU-ccr" secondAttribute="leadingMargin" constant="-3" id="kue-6w-qDE"/>
+                                        <constraint firstItem="F5w-25-yOb" firstAttribute="top" secondItem="idM-gc-ITP" secondAttribute="bottom" constant="8" symbolic="YES" id="l9n-EU-x9N"/>
+                                        <constraint firstItem="eq6-hx-wIi" firstAttribute="leading" secondItem="Z2R-AU-ccr" secondAttribute="leading" constant="11" id="op0-gR-Cu2"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="postBody" destination="idM-gc-ITP" id="t0h-69-ksA"/>
+                                    <outlet property="postTitle" destination="eq6-hx-wIi" id="t1e-4q-FQr"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="6Xi-88-Pf3" id="Put-nf-KUf"/>
+                            <outlet property="delegate" destination="6Xi-88-Pf3" id="iXM-7Z-ldm"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="News" selectedImage="first" id="hi5-Xd-VRf"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MMx-e6-OBV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="720.79999999999995" y="-1530.5847076461771"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="TPQ-fQ-Obv">
