--- a/Gent/Gent/Base.lproj/Main.storyboard
+++ b/Gent/Gent/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -158,20 +158,27 @@
                                 </navigationItem>
                             </items>
                         </navigationBar>
-                        <view key="tableFooterView" userInteractionEnabled="NO" contentMode="scaleToFill" id="qcU-7Q-w1P">
+                        <view key="tableFooterView" contentMode="scaleToFill" id="qcU-7Q-w1P" customClass="CreateAccountTableViewFooter" customModule="Gent">
                             <rect key="frame" x="0.0" y="116" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wui-Wv-pKC">
-                                    <rect key="frame" x="154" y="8" width="46" height="30"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <state key="normal" title="Button"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wui-Wv-pKC">
+                                    <rect key="frame" x="157" y="7" width="61" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="61" id="5nF-0f-Yhy"/>
+                                        <constraint firstAttribute="height" constant="30" id="Fnj-Y8-TOT"/>
+                                    </constraints>
+                                    <state key="normal" title="Submit"/>
                                     <connections>
-                                        <action selector="submitButton:" destination="OhV-aw-FAz" eventType="touchUpInside" id="979-nZ-rZR"/>
+                                        <action selector="submitButton:" destination="OhV-aw-FAz" eventType="touchUpInside" id="0Yc-FG-8pD"/>
                                     </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="Wui-Wv-pKC" firstAttribute="centerX" secondItem="qcU-7Q-w1P" secondAttribute="centerX" id="HAP-ei-BJj"/>
+                                <constraint firstItem="Wui-Wv-pKC" firstAttribute="centerY" secondItem="qcU-7Q-w1P" secondAttribute="centerY" id="xwe-D1-4NK"/>
+                            </constraints>
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FormTableCell" id="oiL-YY-MJX" customClass="FormTableViewCell" customModule="Gent" customModuleProvider="target">
@@ -215,7 +222,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="izJ-Xi-1SR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2302" y="-680"/>
+            <point key="canvasLocation" x="2301.5999999999999" y="-680.5097451274363"/>
         </scene>
         <!--Shop-->
         <scene sceneID="dkC-0D-zYf">
@@ -230,7 +237,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="njs-de-Ney" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="721" y="478"/>
+            <point key="canvasLocation" x="711" y="501"/>
         </scene>
         <!--Chat-->
         <scene sceneID="eUd-br-uJh">
@@ -284,6 +291,28 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VdE-af-jxd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="711.20000000000005" y="-174.06296851574214"/>
+        </scene>
+        <!--StripeTest-->
+        <scene sceneID="gLc-ha-Bng">
+            <objects>
+                <viewController storyboardIdentifier="StripeTest" title="StripeTest" id="4Oj-Gc-1qS" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Xxy-Vd-1u8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d9p-en-qGB">
+                                <rect key="frame" x="164" y="70" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="EeB-LL-OT8"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VqU-VM-Awn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1797" y="80"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="d2d-Tz-VMk">
